Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "'Cài' shipper vào khách sạn, lễ tân tinh vi trộm tiền",
+    "content": "Một nhân viên lễ tân khách sạn tại Đà Nẵng đã bị bắt vì thực hiện hành vi trộm cắp tiền của khách sạn thông qua thủ đoạn tinh vi. Nghi phạm đã tạo tài khoản Facebook để tuyển dụng shipper đến khách sạn tìm hóa đơn ảo, nhằm ghi hình và tạo chứng cứ ngoại phạm cho mình. Trong suốt quá trình này, nghi phạm đã chiếm đoạt tổng cộng 44 triệu đồng từ khách sạn. Hiện công an đang tiến hành xử lý theo quy định của pháp luật.",
+    "link": "https://tuoitre.vn/cai-shipper-vao-khach-san-le-tan-tinh-vi-trom-tien-20250321173228568.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Nhân viên lễ tân khách sạn tại Đà Nẵng đã thực hiện hành vi gì?",
+    "answers": [
+      {
+        "text": "Trộm cắp tiền của khách sạn",
+        "correct": true
+      },
+      {
+        "text": "Giúp đỡ shipper tìm hóa đơn",
+        "correct": false
+      },
+      {
+        "text": "Dọn dẹp khách sạn",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức sự kiện cho khách",
+        "correct": false
+      },
+      {
+        "text": "Hướng dẫn khách du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khởi tố ông Nguyễn Bật Khách, nguyên phó chủ tịch UBND tỉnh Hưng Yên",
     "content": "Cơ quan An ninh điều tra Công an tỉnh Hưng Yên đã khởi tố ông Nguyễn Bật Khách, nguyên phó chủ tịch UBND tỉnh Hưng Yên, để điều tra về vi phạm quy định quản lý và sử dụng tài sản Nhà nước gây thất thoát, lãng phí. Cùng với ông, hai cán bộ khác cũng bị khởi tố trong vụ án liên quan đến lừa đảo chiếm đoạt tài sản tại Công ty cổ phần đầu tư bất động sản Thăng Long. Cuộc điều tra đang tiếp tục làm rõ các sai phạm từ năm 2004 - 2006.",
     "link": "https://tuoitre.vn/khoi-to-ong-nguyen-bat-khach-nguyen-pho-chu-tich-ubnd-tinh-hung-yen-20250321180809079.htm",
@@ -175,33 +206,6 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
-    "answers": [
-      {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
-        "correct": false
-      },
-      {
-        "text": "Vì Modric không hài lòng với trọng tài.",
-        "correct": false
-      },
-      {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Djokovic không ký tên trong đơn kiện ATP",
     "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
     "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
@@ -224,6 +228,33 @@
       },
       {
         "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -2617,37 +2648,6 @@
     ]
   },
   {
-    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
-    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
-    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
-    "answers": [
-      {
-        "text": "Viêm phổi do virus hợp bào hô hấp",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm phế quản",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Sởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chàng trai nặng 162 kg quyết giảm cân",
     "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
     "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
@@ -2674,6 +2674,37 @@
       },
       {
         "text": "30 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
+    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
+    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
+    "answers": [
+      {
+        "text": "Viêm phổi do virus hợp bào hô hấp",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm phế quản",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Sởi",
         "correct": false
       }
     ]
