--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Làm giả thuốc bảo vệ thực vật để bán kiếm lời, hai bị cáo lãnh 20 năm tù",
+    "content": "Hai bị cáo Nguyễn Văn Nhớ và Trần Quốc Huẩn đã bị TAND tỉnh Bạc Liêu tuyên án 20 năm tù giam do sản xuất và buôn bán thuốc bảo vệ thực vật giả mạo nhãn hiệu nổi tiếng để kiếm lời. Họ đã bị bắt quả tang khi đang dán nhãn giả của các thương hiệu lớn như Syngenta và Bayer lên các sản phẩm không rõ nguồn gốc. Hành vi này không chỉ vi phạm pháp luật mà còn gây thiệt hại lớn cho nông dân và ảnh hưởng đến an toàn thực phẩm.",
+    "link": "https://tuoitre.vn/lam-gia-thuoc-bao-ve-thuc-vat-de-ban-kiem-loi-hai-bi-cao-lanh-20-nam-tu-20250321172730468.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Nguyên nhân nào khiến hai bị cáo lãnh án 20 năm tù?",
+    "answers": [
+      {
+        "text": "Làm giả thuốc bảo vệ thực vật",
+        "correct": true
+      },
+      {
+        "text": "Trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Lừa đảo chiếm đoạt tài sản",
+        "correct": false
+      },
+      {
+        "text": "Sản xuất hàng nhái",
+        "correct": false
+      },
+      {
+        "text": "Buôn bán ma túy",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Cài' shipper vào khách sạn, lễ tân tinh vi trộm tiền",
     "content": "Một nhân viên lễ tân khách sạn tại Đà Nẵng đã bị bắt vì thực hiện hành vi trộm cắp tiền của khách sạn thông qua thủ đoạn tinh vi. Nghi phạm đã tạo tài khoản Facebook để tuyển dụng shipper đến khách sạn tìm hóa đơn ảo, nhằm ghi hình và tạo chứng cứ ngoại phạm cho mình. Trong suốt quá trình này, nghi phạm đã chiếm đoạt tổng cộng 44 triệu đồng từ khách sạn. Hiện công an đang tiến hành xử lý theo quy định của pháp luật.",
     "link": "https://tuoitre.vn/cai-shipper-vao-khach-san-le-tan-tinh-vi-trom-tien-20250321173228568.htm",
@@ -560,33 +591,6 @@
     ]
   },
   {
-    "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
-    "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
-    "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cầu Ba Son có vai trò gì trong việc kết nối TP.HCM?",
-    "answers": [
-      {
-        "text": "Nó kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm.",
-        "correct": true
-      },
-      {
-        "text": "Nó chỉ là một cây cầu bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Nó không có vai trò gì đặc biệt.",
-        "correct": false
-      },
-      {
-        "text": "Nó là cầu dành riêng cho người đi bộ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Djokovic không ký tên trong đơn kiện ATP",
     "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
     "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
@@ -614,28 +618,28 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
+    "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
+    "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cầu Ba Son có vai trò gì trong việc kết nối TP.HCM?",
     "answers": [
       {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "text": "Nó kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm.",
         "correct": true
       },
       {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "text": "Nó chỉ là một cây cầu bình thường.",
         "correct": false
       },
       {
-        "text": "Vì Modric không hài lòng với trọng tài.",
+        "text": "Nó không có vai trò gì đặc biệt.",
         "correct": false
       },
       {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "text": "Nó là cầu dành riêng cho người đi bộ.",
         "correct": false
       }
     ]
@@ -663,6 +667,33 @@
       },
       {
         "text": "Chỉ có diễn thuyết về môi trường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -1031,33 +1062,6 @@
     ]
   },
   {
-    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
-    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
-    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
-    "answers": [
-      {
-        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tập trung vào tốc độ chạy",
-        "correct": false
-      },
-      {
-        "text": "Tránh gặp gỡ bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Không cần lên kế hoạch tập luyện",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
     "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
@@ -1107,6 +1111,33 @@
       },
       {
         "text": "Thực phẩm chế biến sẵn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
+    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
+    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
+    "answers": [
+      {
+        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tập trung vào tốc độ chạy",
+        "correct": false
+      },
+      {
+        "text": "Tránh gặp gỡ bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Không cần lên kế hoạch tập luyện",
         "correct": false
       }
     ]
@@ -2720,28 +2751,32 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
+    "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
+    "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
     "cat": "suc-khoe",
-    "positivity": 4,
+    "positivity": 3,
     "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "question": "Những thực phẩm nào có thể khiến não nhanh lão hóa?",
     "answers": [
       {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "text": "Thực phẩm chế biến sẵn",
         "correct": true
       },
       {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "text": "Rau xanh",
         "correct": false
       },
       {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "text": "Trái cây tươi",
         "correct": false
       },
       {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "text": "Hạt ngũ cốc",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà",
         "correct": false
       }
     ]
@@ -2774,32 +2809,28 @@
     ]
   },
   {
-    "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
-    "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
-    "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 4,
     "importance": 8,
-    "question": "Những thực phẩm nào có thể khiến não nhanh lão hóa?",
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
     "answers": [
       {
-        "text": "Thực phẩm chế biến sẵn",
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
         "correct": true
       },
       {
-        "text": "Rau xanh",
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
         "correct": false
       },
       {
-        "text": "Trái cây tươi",
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
         "correct": false
       },
       {
-        "text": "Hạt ngũ cốc",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà",
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
         "correct": false
       }
     ]
