--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "CLB Nhật Bản trừ lương lãnh đạo vì thua đại diện Singapore",
+    "content": "CLB Sanfrecce Hiroshima của Nhật Bản đã quyết định trừ lương ba lãnh đạo do sai sót trong việc đăng ký cầu thủ, dẫn đến việc đội bóng bị loại khỏi tứ kết AFC Champions League Two 2024-2025. Chủ tịch Masayoshi Kubo bị trừ 10% lương trong hai tháng, nhưng ông tự nguyện chịu phạt trong sáu tháng. Hai lãnh đạo bộ phận tuyển trạch cũng bị trừ lương do không kiểm tra kỹ tình trạng treo giò của cầu thủ Valere Germain.",
+    "link": "https://vnexpress.net/clb-nhat-ban-tru-luong-lanh-dao-vi-thua-dai-dien-singapore-4864369.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao CLB Sanfrecce Hiroshima trừ lương lãnh đạo?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong đăng ký cầu thủ",
+        "correct": true
+      },
+      {
+        "text": "Vì thua trận",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ ngân sách",
+        "correct": false
+      },
+      {
+        "text": "Vì vi phạm nội quy giải đấu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá heo giống tăng gấp ba, nhiều người nuôi thận trọng với việc tái đàn",
     "content": "Giá heo giống hiện đang cao gấp ba lần so với mức giá tốt của năm 2023, khiến nhiều người nuôi heo thận trọng trong việc tái đàn. Cụ thể, giá heo giống đang dao động từ 2,7 đến 3,2 triệu đồng/con, trong khi giá heo hơi vẫn duy trì ở mức cao. Nhiều người nuôi lo ngại về rủi ro khi giá thịt heo có thể biến động, dẫn đến quyết định không tái đàn. Theo các chuyên gia, giá heo giống cao đã chiếm một phần lớn trong tổng chi phí sản xuất, làm giảm động lực tái đàn của người chăn nuôi.",
     "link": "https://tuoitre.vn/gia-heo-giong-tang-gap-ba-nhieu-nguoi-nuoi-than-trong-voi-viec-tai-dan-2025032117281109.htm",
@@ -349,33 +376,6 @@
     ]
   },
   {
-    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
-    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
-    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
-    "answers": [
-      {
-        "text": "Chơi game và làm khảo sát để nhận quà",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có trưng bày sản phẩm",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động gì đặc biệt",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có diễn thuyết về môi trường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
     "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
     "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
@@ -398,6 +398,33 @@
       },
       {
         "text": "Nó là cầu dành riêng cho người đi bộ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
+    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
+    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
+    "answers": [
+      {
+        "text": "Chơi game và làm khảo sát để nhận quà",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có trưng bày sản phẩm",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động gì đặc biệt",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có diễn thuyết về môi trường",
         "correct": false
       }
     ]
@@ -2482,28 +2509,28 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "title": "5 cách bảo vệ thận",
+    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
+    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
     "answers": [
       {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "text": "Uống đủ nước và không uống rượu bia.",
         "correct": true
       },
       {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "text": "Tăng cường ăn mặn.",
         "correct": false
       },
       {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       },
       {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
         "correct": false
       }
     ]
@@ -2536,28 +2563,28 @@
     ]
   },
   {
-    "title": "5 cách bảo vệ thận",
-    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
-    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
     "answers": [
       {
-        "text": "Uống đủ nước và không uống rượu bia.",
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
         "correct": true
       },
       {
-        "text": "Tăng cường ăn mặn.",
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
         "correct": false
       },
       {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
         "correct": false
       },
       {
-        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
         "correct": false
       }
     ]
@@ -4679,33 +4706,6 @@
       },
       {
         "text": "Vì vi phạm quy định về quản lý đất đai.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Giảm 10 kg cân nặng và 7 cm vòng eo không cần ăn kiêng",
-    "content": "Chị Hảo, 44 tuổi, đã giảm 10 kg và 7 cm vòng eo trong ba tháng mà không cần kiêng ăn, nhờ vào phác đồ điều trị cá thể hóa tại Bệnh viện Đa khoa Tâm Anh Hà Nội. Sau khi được phân tích chỉ số cơ thể và tình trạng sức khỏe, bác sĩ đã chỉ định kết hợp phương pháp đông hủy mỡ và tư vấn thay đổi thói quen sinh hoạt. Kết quả cho thấy chỉ số đường huyết và mỡ máu của chị đều đã về ngưỡng an toàn sau thời gian điều trị.",
-    "link": "https://vnexpress.net/giam-10-kg-can-nang-va-7-cm-vong-eo-khong-can-an-kieng-4863762.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Hảo đã giảm bao nhiêu kg và vòng eo trong thời gian điều trị?",
-    "answers": [
-      {
-        "text": "10 kg và 7 cm",
-        "correct": true
-      },
-      {
-        "text": "5 kg và 5 cm",
-        "correct": false
-      },
-      {
-        "text": "15 kg và 10 cm",
-        "correct": false
-      },
-      {
-        "text": "8 kg và 6 cm",
         "correct": false
       }
     ]
