Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Doanh nghiệp nhỏ Việt dẫn đầu khu vực trong đầu tư vào AI",
+    "content": "Theo báo cáo khảo sát của CPA Australia, doanh nghiệp nhỏ tại Việt Nam đang dẫn đầu khu vực châu Á - Thái Bình Dương trong việc đầu tư vào trí tuệ nhân tạo (AI), với 44% doanh nghiệp tham gia khảo sát cho biết đã ứng dụng AI vào hoạt động kinh doanh. Sự tăng trưởng này phản ánh sự thích ứng và tinh thần khởi nghiệp mạnh mẽ của các doanh nghiệp nhỏ Việt Nam. Ngoài ra, 82% doanh nghiệp cho biết đã ghi nhận tăng trưởng và có nhiều kỳ vọng vào doanh thu từ thị trường nước ngoài trong năm 2025.",
+    "link": "https://tuoitre.vn/doanh-nghiep-nho-viet-dan-dau-khu-vuc-trong-dau-tu-vao-ai-20250321212357756.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Doanh nghiệp nào tại Việt Nam đang dẫn đầu trong đầu tư vào AI?",
+    "answers": [
+      {
+        "text": "Doanh nghiệp nhỏ",
+        "correct": true
+      },
+      {
+        "text": "Doanh nghiệp lớn",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp nhà nước",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp đa quốc gia",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trấn Thành bỏ ô tô, đi xe máy đến concert \"Anh trai say hi\" vì sự cố hy hữu",
     "content": "MC Trấn Thành đã gặp phải sự cố giao thông khi bị kẹt xe suốt 2 tiếng trước khi concert \"Anh trai say hi\" diễn ra. Để kịp giờ tham gia chương trình, anh buộc phải xuống ô tô và chuyển sang di chuyển bằng xe máy. Mặc dù gặp phải tình huống khó khăn, Trấn Thành vẫn kịp có mặt và không làm ảnh hưởng đến chương trình, thu hút sự quan tâm của khán giả qua livestream của mình.",
     "link": "https://dantri.com.vn/giai-tri/tran-thanh-bo-o-to-di-xe-may-den-concert-anh-trai-say-hi-vi-su-co-hy-huu-20250321205542456.htm",
@@ -2798,28 +2825,28 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
+    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
+    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
+    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
+    "cat": "the-thao",
+    "positivity": 9,
     "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
     "answers": [
       {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
         "correct": true
       },
       {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "text": "Tham gia giải Grand Slam đầu tiên",
         "correct": false
       },
       {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "text": "Được biết đến từ năm 2022",
         "correct": false
       },
       {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "text": "Giành huy chương vàng Olympic",
         "correct": false
       }
     ]
@@ -2883,28 +2910,28 @@
     ]
   },
   {
-    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
-    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
-    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
-    "cat": "the-thao",
-    "positivity": 9,
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
     "importance": 8,
-    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
     "answers": [
       {
-        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
         "correct": true
       },
       {
-        "text": "Tham gia giải Grand Slam đầu tiên",
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
         "correct": false
       },
       {
-        "text": "Được biết đến từ năm 2022",
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
         "correct": false
       },
       {
-        "text": "Giành huy chương vàng Olympic",
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
         "correct": false
       }
     ]
