--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,28 +81,28 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Hai người bị khởi tố vì làm giả hồ sơ để cầu thủ trẻ Sông Lam Nghệ An 'gian lận tuổi'",
-    "content": "Hai người, Nguyễn Thị Tú và Trần Quốc Dũng, đã bị khởi tố vì làm giả hồ sơ, tài liệu để giúp một số cầu thủ trẻ gian lận tuổi và đủ điều kiện thi đấu tại Câu lạc bộ Sông Lam Nghệ An. Cơ quan An ninh điều tra Công an tỉnh Nghệ An cho biết họ bị truy tố theo tội làm giả tài liệu của cơ quan, tổ chức. Sông Lam Nghệ An đã từng gặp nhiều vấn đề liên quan đến gian lận tuổi trong quá khứ, và vụ việc này tiếp tục làm dấy lên nghi vấn về quy trình tuyển chọn cầu thủ trẻ của CLB.",
-    "link": "https://vnexpress.net/hai-nguoi-bi-khoi-to-vi-lam-gia-ho-so-de-cau-thu-tre-song-lam-nghe-an-gian-lan-tuoi-4864400.html",
+    "title": "Hai người bị khởi tố vì làm hồ sơ 'gian lận tuổi' cho cầu thủ Sông Lam Nghệ An",
+    "content": "Nguyễn Thị Tú và Trần Quốc Dũng đã bị khởi tố vì làm giả hồ sơ để giúp một số cầu thủ trẻ gian lận tuổi thi đấu tại Câu lạc bộ Sông Lam Nghệ An. Cơ quan An ninh điều tra của Công an tỉnh Nghệ An đã xác định họ đã làm giả giấy khai sinh và học bạ để qua mặt các cơ quan chức năng. Sông Lam Nghệ An, một lò đào tạo trẻ hàng đầu Việt Nam, đã nhiều lần dính líu đến các nghi vấn về độ tuổi của cầu thủ. Hiện tại, cơ quan điều tra vẫn đang làm rõ số lượng cầu thủ bị ảnh hưởng và các sai phạm liên quan.",
+    "link": "https://vnexpress.net/hai-nguoi-bi-khoi-to-vi-lam-ho-so-gian-lan-tuoi-cho-cau-thu-song-lam-nghe-an-4864400.html",
     "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nguyễn Thị Tú và Trần Quốc Dũng bị khởi tố?",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Hai người nào bị khởi tố vì làm giả hồ sơ cho cầu thủ Sông Lam Nghệ An?",
     "answers": [
       {
-        "text": "Vì làm giả hồ sơ để cầu thủ gian lận tuổi",
+        "text": "Nguyễn Thị Tú và Trần Quốc Dũng",
         "correct": true
       },
       {
-        "text": "Vì không đủ điều kiện thi đấu",
+        "text": "Nguyễn Văn A và Trần Văn B",
         "correct": false
       },
       {
-        "text": "Vì vi phạm hợp đồng lao động",
+        "text": "Lê Thị C và Phạm Quốc D",
         "correct": false
       },
       {
-        "text": "Vì trốn thuế",
+        "text": "Nguyễn Hữu E và Nguyễn Thế F",
         "correct": false
       }
     ]
