Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Thái Lan hạ đại diện Tây Á trước vòng loại Asian Cup",
+    "content": "Trong trận giao hữu diễn ra vào tối 21/3, đội tuyển Thái Lan đã giành chiến thắng 2-0 trước Afghanistan nhờ cú đúp bàn thắng của tiền đạo Patrik Gustavsson. Trận đấu diễn ra trên sân Rajamangala, với sự chứng kiến của hơn 10.000 khán giả. Thái Lan chiếm ưu thế trong suốt trận đấu với tỷ lệ cầm bóng cao và nhiều cơ hội ghi bàn, qua đó có bước chạy đà thuận lợi trước vòng loại Asian Cup 2027.",
+    "link": "https://vnexpress.net/thai-lan-ha-dai-dien-tay-a-truoc-vong-loai-asian-cup-4864406.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thái Lan đã thắng đội nào trong trận giao hữu trước vòng loại Asian Cup?",
+    "answers": [
+      {
+        "text": "Afghanistan",
+        "correct": true
+      },
+      {
+        "text": "Sri Lanka",
+        "correct": false
+      },
+      {
+        "text": "Lào",
+        "correct": false
+      },
+      {
+        "text": "Myanmar",
+        "correct": false
+      },
+      {
+        "text": "Nepal",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hai người bị khởi tố vì làm hồ sơ 'gian lận tuổi' cho cầu thủ Sông Lam Nghệ An",
     "content": "Nguyễn Thị Tú và Trần Quốc Dũng đã bị khởi tố vì làm giả hồ sơ để giúp một số cầu thủ trẻ gian lận tuổi thi đấu tại Câu lạc bộ Sông Lam Nghệ An. Cơ quan An ninh điều tra của Công an tỉnh Nghệ An đã xác định họ đã làm giả giấy khai sinh và học bạ để qua mặt các cơ quan chức năng. Sông Lam Nghệ An, một lò đào tạo trẻ hàng đầu Việt Nam, đã nhiều lần dính líu đến các nghi vấn về độ tuổi của cầu thủ. Hiện tại, cơ quan điều tra vẫn đang làm rõ số lượng cầu thủ bị ảnh hưởng và các sai phạm liên quan.",
     "link": "https://vnexpress.net/hai-nguoi-bi-khoi-to-vi-lam-ho-so-gian-lan-tuoi-cho-cau-thu-song-lam-nghe-an-4864400.html",
@@ -1256,28 +1287,28 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "title": "Djokovic không ký tên trong đơn kiện ATP",
+    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
+    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
     "cat": "the-thao",
     "positivity": 6,
     "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
     "answers": [
       {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
         "correct": true
       },
       {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "text": "Vì không đồng ý với nội dung kiện.",
         "correct": false
       },
       {
-        "text": "Vì Modric không hài lòng với trọng tài.",
+        "text": "Để thể hiện sự ủng hộ đối với ATP.",
         "correct": false
       },
       {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
         "correct": false
       }
     ]
@@ -1337,28 +1368,28 @@
     ]
   },
   {
-    "title": "Djokovic không ký tên trong đơn kiện ATP",
-    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
-    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
     "cat": "the-thao",
     "positivity": 6,
     "importance": 7,
-    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
     "answers": [
       {
-        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
         "correct": true
       },
       {
-        "text": "Vì không đồng ý với nội dung kiện.",
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
         "correct": false
       },
       {
-        "text": "Để thể hiện sự ủng hộ đối với ATP.",
+        "text": "Vì Modric không hài lòng với trọng tài.",
         "correct": false
       },
       {
-        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -1727,33 +1758,6 @@
     ]
   },
   {
-    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
-    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
-    "answers": [
-      {
-        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
-        "correct": true
-      },
-      {
-        "text": "Không, chỉ cần theo dõi triệu chứng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ cần thuốc uống.",
-        "correct": false
-      },
-      {
-        "text": "Không cần hóa trị nếu không có triệu chứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
     "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
     "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
@@ -1776,6 +1780,33 @@
       },
       {
         "text": "Thực phẩm chế biến sẵn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
+    "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bị ung thư phổi giai đoạn hai thì có cần hóa trị không?",
+    "answers": [
+      {
+        "text": "Có, thường cần hóa trị để hỗ trợ điều trị.",
+        "correct": true
+      },
+      {
+        "text": "Không, chỉ cần theo dõi triệu chứng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ cần thuốc uống.",
+        "correct": false
+      },
+      {
+        "text": "Không cần hóa trị nếu không có triệu chứng.",
         "correct": false
       }
     ]
@@ -2322,33 +2353,6 @@
     ]
   },
   {
-    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
-    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
-    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
-    "answers": [
-      {
-        "text": "Vì tội giết người",
-        "correct": true
-      },
-      {
-        "text": "Vì trộm cắp tài sản",
-        "correct": false
-      },
-      {
-        "text": "Vì lừa đảo",
-        "correct": false
-      },
-      {
-        "text": "Vì hành hung người khác",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tái tạo lưỡi cho chàng trai ung thư",
     "content": "Chàng trai 26 tuổi ở TP HCM bị ung thư lưỡi trái và di căn hạch dưới hàm đã trải qua ca phẫu thuật cắt u và tái tạo lưỡi bằng vạt da ở đùi. Ca phẫu thuật diễn ra trong 8 giờ với sự tham gia của hai êkíp bác sĩ, cho phép khôi phục hình thể và chức năng lưỡi cho bệnh nhân. Sau phẫu thuật, bệnh nhân có thể đi lại và tập nuốt, cho thấy sự thành công trong việc phục hồi chức năng nói và nuốt.",
     "link": "https://vnexpress.net/tai-tao-luoi-cho-chang-trai-ung-thu-4863881.html",
@@ -2371,6 +2375,33 @@
       },
       {
         "text": "Bằng việc thay thế lưỡi bằng một bộ phận nhân tạo.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
+    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
+    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 7,
+    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
+    "answers": [
+      {
+        "text": "Vì tội giết người",
+        "correct": true
+      },
+      {
+        "text": "Vì trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Vì lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "Vì hành hung người khác",
         "correct": false
       }
     ]
@@ -2438,6 +2469,33 @@
     ]
   },
   {
+    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
+    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
+    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
+    "answers": [
+      {
+        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
+        "correct": true
+      },
+      {
+        "text": "Có, vaccine HPV làm teo buồng trứng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ phạm gây đau rốn",
     "content": "Đau rốn có thể do nhiều nguyên nhân khác nhau, trong đó khó tiêu là nguyên nhân phổ biến nhất. Các nguyên nhân nghiêm trọng khác bao gồm viêm ruột thừa, viêm dạ dày, và bệnh Crohn. Đau rốn có thể kèm theo các triệu chứng như buồn nôn, tiêu chảy, và cảm giác nóng rát, tùy thuộc vào nguyên nhân cụ thể. Ngoài ra, táo bón và nhiễm trùng cũng là những yếu tố có thể gây ra cơn đau này.",
     "link": "https://vnexpress.net/thu-pham-gay-dau-ron-4864078.html",
@@ -2464,33 +2522,6 @@
       },
       {
         "text": "Bệnh Crohn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
-    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
-    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
-    "answers": [
-      {
-        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
-        "correct": true
-      },
-      {
-        "text": "Có, vaccine HPV làm teo buồng trứng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
         "correct": false
       }
     ]
